...
					if horizontalSizeClass != .compact {
						Button {
							withAnimation {
								columnVisibility = columnVisibility == .detailOnly ? .automatic : .detailOnly
							}
						} label: {
							Label("Toggle Sidebar", systemImage: "sidebar.left")
						}
						.keyboardShortcut("l", modifiers: [.command, .shift])
					}
				}
			}
		#endif
...
